# TCGA_BRCA_clinical

./: README.md  pyproject.toml  requirements.txt
data/: brca_tcga_clinical.preprocess.pkl
notebooks/: 10_EDA_and_preprocessing.ipynb  20_survival_analysis.ipynb  30_predictive_models.ipynb
tcga_brca_clinical/: conf.py  io.py  make_dataset.py  preprocess.py
tests/: test_preprocessing.py
